--- a/superlists/static/tests/tests.html
+++ b/superlists/static/tests/tests.html
@@ -18,10 +18,10 @@
     <script src="../list.js"></script>
     <script>
         /*global $, test, equal */
-        /*QUnit.test("errors should be hidden on keypress", function (assert) {
+        QUnit.test("errors should be hidden on keypress", function (assert) {
             $('input').trigger('keypress');
             assert.equal($('.has-error').is(':visible'), false);
-        });*/
+        });
         QUnit.test("errors not be hidden unless there is a keypress", function (assert) {
             assert.equal($('.has-error').is(':visible'), true);
         });
